Add Signin with google in front

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,8 @@
     <meta name="author" content="Sebastian Gonzales">
     <meta name="image" property="og:image" content="%PUBLIC_URL%/media/FinnApp.jpg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- Google Auth library -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
